testsuite/tests/indexed-types/should_fail/T8227.stderr

T8227.hs:17:27: error:
    • Couldn't match type ‘Scalar (V a)’
                     with ‘Scalar (V a) -> Scalar (V a)’
      Expected type: Scalar (V a)
        Actual type: Scalar (V (Scalar (V a) -> Scalar (V a)))
                     -> Scalar (V (Scalar (V a) -> Scalar (V a)))
    • In the expression: arcLengthToParam eps eps
      In an equation for ‘absoluteToParam’:
          absoluteToParam eps seg = arcLengthToParam eps eps
    • Relevant bindings include
        seg :: a (bound at T8227.hs:17:21)
        eps :: Scalar (V a) (bound at T8227.hs:17:17)
        absoluteToParam :: Scalar (V a) -> a -> Scalar (V a)
          (bound at T8227.hs:17:1)
